Camino only - Bug 396559: Support window.blur(). r/sr=pink